[package]
name = "fluid"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
rustyline = "7.1.0"
structopt = "0.3.21"

# Language Items
fluid_lexer = { path = "./packages/fluid_lexer/" }
fluid_parser = { path = "./packages/fluid_parser/" }
fluid_codegen = { path = "./packages/fluid_codegen/" }
fluid_error = { path = "./packages/fluid_error/" }

[build-dependencies]
cc = "1.0.46"

[profile.dev]
opt-level = 0
lto = false
